resolve page overflow issues on dash and profile

--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -7,7 +7,7 @@
 }
 
 .page-container{
-    height: auto;
+    height: calc(100vh - 60px);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
