--- a/frontend/src/components/PetProfile/PetProfile.css
+++ b/frontend/src/components/PetProfile/PetProfile.css
@@ -7,7 +7,7 @@
 }
 .dash-page-container{
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 60px);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
